Fix screen shake
Always show scrollbar to fix the problem

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #353535;
+    overflow-y: scroll;
 }
 
 svg.network {
